# libtaos-rs

./: .gitignore  Cargo.toml  README.md  build.rs  wrapper.h
examples/: demo.rs
proc-test-catalog/: Cargo.toml
proc-test-catalog/src/: lib.rs
proc-test-catalog/tests/: test-describe.rs
src/: bindings.rs  client.rs  error.rs  field.rs  lib.rs  rest.rs  schemaless.rs  sml.rs  stmt.rs  test.rs  timestamp.rs  util.rs
src/bindings/: taos.rs
src/stmt/: bind.rs
test-catalog/: Cargo.toml  README.md
test-catalog/src/: lib.rs  main.rs
tests/: describe.rs  errors.rs  init.rs  quote.rs
