[package]
authors = ["Linhe Huo <linhehuo@gmail.com>"]
edition = "2018"
name = "libtaos"
version = "0.3.9"
keywords = ["TDengine", "taos", "r2d2", "database", "tsdb"]
license = "AGPL-3.0"
repository = "https://github.com/taosdata/libtaos-rs.git"
description = "TDengine Client for Rust"
homepage = "https://github.com/taosdata/libtaos-rs"
documentation = "https://docs.rs/libtaos"

[dependencies]
bstr = "0.2"
derive_builder = "0.10.0"
itertools = "0.10.0"
lazy_static = "1.4"
log = "0.4.14"
num_enum = "0.5.1"
r2d2 = {version = "0.8", optional = true}
reqwest = {version = "0.11.3", features = ["json"], default-features = false, optional = true }
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_repr = "0.1"
thiserror = "1.0"
chrono = "0.4.19"
paste = "1"
stdext = "0.3.0"
[build-dependencies]
bindgen = { version = "0.58.1", optional = true }

[dev-dependencies]
env_logger = "0.8.3"
tokio = {version = "1.5.0", features = ["rt", "macros", "rt-multi-thread"]}

[features]
default = ["stmt", "cleanup"]
rest = ["reqwest"]
stmt = []
cleanup = []
