[package]
edition = "2021"
name = "proc-test-catalog"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
git2 = "0.13.25"
itertools = "0.10.3"
test-catalog = {path = "../test-catalog", version = "0.1.0"}

[lib]
proc-macro = true