[package]
name = "test-catalog"
version = "0.1.0"
edition = "2021"
authors = ["Linhe Huo <linhehuo@gmail.com>"]
description = "Collect and export test cases as a catalog."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.26", features = ["bundled"] }
lazy_static = "1.4"
git2 = "0.13"
project-root = "0.2"
cargo_toml = "0.10"
chrono = "0.4"
itertools = "0.10"
clap = { version = "3.0.0-rc.7", features = ["derive"]}
serde_json = "1.0"
linked-hash-map = { version = "0.5.4", features = ["serde_impl"] }
csv = "1.1"
